cmake_minimum_required(VERSION 3.24)
project(AnthonyCoelhoAssign1)

set(CMAKE_CXX_STANDARD 14)

add_executable(AnthonyCoelhoAssign1
        .idea/.gitignore
        .idea/AnthonyCoelhoAssign1.iml
        .idea/modules.xml
        .idea/workspace.xml
        AnthonyCoelhoAssign1/.idea/.gitignore
        AnthonyCoelhoAssign1/.idea/AnthonyCoelhoAssign1.iml
        AnthonyCoelhoAssign1/.idea/misc.xml
        AnthonyCoelhoAssign1/.idea/modules.xml
        AnthonyCoelhoAssign1/.idea/workspace.xml
        AnthonyCoelhoAssign1/cmake-build-debug/.cmake/api/v1/query/cache-v2
        AnthonyCoelhoAssign1/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
        AnthonyCoelhoAssign1/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
        AnthonyCoelhoAssign1/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
        AnthonyCoelhoAssign1/cmake-build-debug/.cmake/api/v1/reply/cache-v2-224c7346eeacb3ab3258.json
        AnthonyCoelhoAssign1/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-0cee9fba96fe785980e8.json
        AnthonyCoelhoAssign1/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-e305661896ad84de3344.json
        AnthonyCoelhoAssign1/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-d0094a50bb2071803777.json
        AnthonyCoelhoAssign1/cmake-build-debug/.cmake/api/v1/reply/index-2023-01-21T21-09-22-0259.json
        AnthonyCoelhoAssign1/cmake-build-debug/.cmake/api/v1/reply/target-AnthonyCoelhoAssign1-Debug-6069d237e47e84a5070c.json
        AnthonyCoelhoAssign1/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-8106fcb17e1eb8a816db.json
        AnthonyCoelhoAssign1/cmake-build-debug/Testing/Temporary/LastTest.log
        AnthonyCoelhoAssign1/cmake-build-debug/.ninja_deps
        AnthonyCoelhoAssign1/cmake-build-debug/.ninja_log
        AnthonyCoelhoAssign1/cmake-build-debug/AnthonyCoelhoAssign1.exe
        AnthonyCoelhoAssign1/cmake-build-debug/build.ninja
        AnthonyCoelhoAssign1/cmake-build-debug/cmake_install.cmake
        AnthonyCoelhoAssign1/cmake-build-debug/CMakeCache.txt
        AnthonyCoelhoAssign1/CMakeLists.txt
        AnthonyCoelhoAssign1/main.c)
